--- a/doc/README
+++ b/doc/README
@@ -1,4 +1,4 @@
-SmallChange 0.1 ALPHA
+Funcoin 0.1 ALPHA
 
 Copyright (c) 2009-2012 Bitcoin Developers
 Copyright (c) 2011-2012 Litecoin Developers
@@ -12,7 +12,7 @@ cryptographic software written by Eric Young (eay@cryptsoft.com).
 
 Intro
 -----
-SmallChange is a free open source peer-to-peer electronic cash system that is
+Funcoin is a free open source peer-to-peer electronic cash system that is
 completely decentralized, without the need for a central server or trusted
 parties.  Users hold the crypto keys to their own money and transact directly
 with each other, with the help of a P2P network to check for double-spending.
@@ -20,14 +20,14 @@ with each other, with the help of a P2P network to check for double-spending.
 
 Setup
 -----
-You need the Qt4 run-time libraries to run smallchange-qt. On Debian or Ubuntu:
+You need the Qt4 run-time libraries to run Funcoin-qt. On Debian or Ubuntu:
   sudo apt-get install libqtgui4
 
 Unpack the files into a directory and run:
- bin/32/smallchange-qt (GUI, 32-bit)
- bin/32/smallchange (headless, 32-bit)
- bin/64/smallchange-qt (GUI, 64-bit)
- bin/64/smallchange (headless, 64-bit)
+ bin/32/Funcoin-qt (GUI, 32-bit)
+ bin/32/Funcoin (headless, 32-bit)
+ bin/64/Funcoin-qt (GUI, 64-bit)
+ bin/64/Funcoin (headless, 64-bit)
 
 
 See the documentation at the bitcoin wiki:
